add missing env in ci workflows

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -38,7 +38,7 @@ jobs:
     - name: npm install migrate and test
       run: |
         npm i
-        npm run migrate:test up
+        npm run migrate up
         npm run test
       env:
         CI: true
@@ -49,6 +49,11 @@ jobs:
         PGUSER: postgres
         PGPASSWORD: mysecretpassword
         PGDATABASE: forumapi_test
+        PGHOST_TEST: localhost
+        PGPORT_TEST: 5432
+        PGUSER_TEST: postgres
+        PGPASSWORD_TEST: mysecretpassword
+        PGDATABASE_TEST: forumapi_test
         ACCESS_TOKEN_KEY: secret
         REFRESH_TOKEN_KEY: terces
         ACCESS_TOKEN_AGE: 3600
